fixed footer alignment
minor change

--- a/css/style.css
+++ b/css/style.css
@@ -807,6 +807,7 @@ nav ul{
     height:161px;
     padding-left: 285px;
     justify-content: flex-start;
+    align-items: center;
     margin-top: 20px;
 }
 .Loctext{
